# paperdump

./: Cargo.toml  PKGBUILD  README.md  config.example.toml
src/: config.rs  main.rs
