[package]
name = "paperdump"
version = "0.1.0"
authors = ["kamek-pf"]
edition = "2018"

[dependencies]
notify = "5.0.0-pre.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
argh = "0.1.3"
humantime-serde = "1.0.0"
anyhow = "1.0.26"
crossbeam-channel = "0.4.2"
